--- a/api-libreria-dotnet/pruebaSantiAPI_REST.csproj
+++ b/api-libreria-dotnet/pruebaSantiAPI_REST.csproj
@@ -199,6 +199,7 @@
     <Compile Include="SQL\ConnectionBD.cs" />
     <Compile Include="SQL\DAO\DAOMySQL\AutorDAOMySQL.cs" />
     <Compile Include="SQL\DAO\DAOMySQL\EdicionDAOMySQL.cs" />
+    <Compile Include="SQL\DAO\DAOMySQL\FormatoDAOMySQL.cs" />
     <Compile Include="SQL\DAO\DAOMySQL\TemaDAOMySQL.cs" />
     <Compile Include="SQL\DAO\interfaceDAO\IAutorDAO.cs" />
     <Compile Include="SQL\DAO\interfaceDAO\IEdicionDAO.cs" />
